test: create scenario where the data has multiples queries
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>